--- a/hyena-spring-boot-starter-test/src/main/resources/application.yml
+++ b/hyena-spring-boot-starter-test/src/main/resources/application.yml
@@ -36,7 +36,7 @@ spring:
     name: hyena
     username: test
     password: 123456
-    url: jdbc:mysql://localhost:3306/hyena?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai&zeroDateTimeBehavior=CONVERT_TO_NULL&useSSL=false&allowMultiQueries=true
+    url: jdbc:mysql://localhost:3306/hyena?useUnicode=true&allowPublicKeyRetrieval=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai&zeroDateTimeBehavior=CONVERT_TO_NULL&useSSL=false&allowMultiQueries=true
     initialPoolSize: 1
     minPoolSize: 1
     maxPoolSize: 10
