--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ ext {
     swaggerVersion = '2.9.2'
     lombokVersion = '1.18.10'
     web3jVersion = '3.4.0'
+    httpclientVersion = '4.5.2'
 }
 
 
